# kodiak-simulations-2023-07

./: .gitignore  README.md  ape-config.yaml  pyproject.toml
contracts/: Fee0Backtest.sol  Fee1Backtest.sol  UniswapV3LPFee0Backtest.sol  UniswapV3LPFee1Backtest.sol  UniswapV3LPFullBacktest.sol  UniswapV3LPSimpleBacktest.sol
kodiak_simulations_2023_07/: __init__.py  base.py  constants.py  math.py  optimize.py  runner.py  runners.py  utils.py
kodiak_simulations_2023_07/runners/: __init__.py  base.py  full.py  optimized.py  setup.py  simple.py
notebook/: addendum.ipynb  analysis.ipynb  backtest.ipynb  math.ipynb  queries.ipynb  wrangling.ipynb
notebook/data/: price_0x109830a1AAaD605BbF02a9dFA7B0B92EC2FB7dAa_15384250_18009321_2400.csv  price_0x11950d141EcB863F01007AdD7D1A342041227b58_17090770_19162080_7200.csv  price_0x11950d141EcB863F01007AdD7D1A342041227b58_17090770_19162080_7200_params.csv  price_0x2F62f2B4c5fcd7570a709DeC05D68EA19c82A9ec_12388028_18009964_2400.csv  price_0x4585FE77225b41b697C938B018E2Ac67Ac5a20c0_12376387_18009229_2400.csv  price_0x59D72DDB29Da32847A4665d08ffc8464A7185FAE_51756830_177987230_345600.csv  price_0x59D72DDB29Da32847A4665d08ffc8464A7185FAE_51756830_177987230_345600_params.csv  price_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_12376729_18009136_2400.csv  price_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_13143698_18399698_2400.csv  price_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_13143698_18399698_2400_params.csv  price_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_13143698_18399698_7200.csv  price_0xCD423F3ab39a11ff1D9208B7D37dF56E902C932B_16741748_19162080_7200.csv  price_0xCD423F3ab39a11ff1D9208B7D37dF56E902C932B_16741748_19162080_7200_params.csv  price_0xa3f558aebAecAf0e11cA4b2199cC5Ed341edfd74_12512163_18009376_2400.csv
notebook/fits/: price_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_12509859_17765859_2400.csv  price_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_13143698_18399698_7200_params.csv
notebook/results/: UniswapV3LPFixedWidthRunner_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_180_50400_backtest_16219692_16270092_2400.csv  UniswapV3LPFixedWidthRunner_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_180_50400_backtest_16219692_16867692_2400.csv  UniswapV3LPFixedWidthRunner_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_180_7200_backtest_16219692_16867692_2400.csv  UniswapV3LPFixedWidthRunner_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_240_50400_backtest_16219692_16270092_2400.csv  UniswapV3LPFixedWidthRunner_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_360_50400_backtest_16219692_16270092_2400.csv  UniswapV3LPFixedWidthRunner_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_420_50400_backtest_16219692_16270092_2400.csv
notebook/results/amount0/: UniswapV3LPFixedWidthRunner_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_120_50400_backtest_16219692_16270092_2400.csv  UniswapV3LPFixedWidthRunner_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_180_50400_backtest_16219692_16270092_2400.csv  UniswapV3LPFixedWidthRunner_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_240_50400_backtest_16219692_16270092_2400.csv  UniswapV3LPFixedWidthRunner_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_300_2400_backtest_16219692_16270092_2400.csv  UniswapV3LPFixedWidthRunner_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_360_50400_backtest_16219692_16270092_2400.csv  UniswapV3LPFixedWidthRunner_0x88e6A0c2dDD26FEEb64F039a2c41296FcB3f5640_420_50400_backtest_16219692_16270092_2400.csv
scripts/: backtester.py  fit.py  optimize.py  query.py
(+55 files in other folders)
