[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kodiak-simulations-2023-07"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8,<4"
license = "MIT"
keywords = []
authors = [
  { name = "smolquants", email = "dev@smolquants.xyz" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/smolquants/kodiak-simulations-2023-07#readme"
Issues = "https://github.com/smolquants/kodiak-simulations-2023-07/issues"
Source = "https://github.com/smolquants/kodiak-simulations-2023-07"

[tool.hatch.version]
path = "kodiak_simulations_2023_07/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "eth-ape==0.6.17",
  "pandas",
  "numpy",
  "matplotlib",
  "scipy",
  "notebook==6.5.2",
  "backtest-ape==0.1.0a8",
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:kodiak_simulations_2023_07 tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py39"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py39"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["kodiak_simulations_2023_07"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["kodiak_simulations_2023_07", "tests"]
branch = true
parallel = true
omit = [
  "kodiak_simulations_2023_07/__about__.py",
]

[tool.coverage.paths]
kodiak_simulations_2023_07 = ["kodiak_simulations_2023_07", "*/kodiak-simulations-2023-07/kodiak_simulations_2023_07"]
tests = ["tests", "*/kodiak-simulations-2023-07/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
